# TensorLib

./: CMakeLists.txt  README.md
include/: string_builder.h  tensor.h  tensor_operations.h
src/: main.c  string_builder.c  tensor.c  tensor_operations.c
src/old/: tensor_old.c  tensor_operations_old.c
